force-app/main/default/objects/leaseworks__Payment__c/fields/Converted_Currency_Amount_Local__c.field-meta.xml
<CustomField>
    <fullName>Converted_Currency_Amount_Local__c</fullName>
    <description>This field will be calculated only when the exchange rate information is available.</description>
    <formula>IF(AND( leaseworks__Invoice__r.leaseworks__Exchange_Rate__c  != 0, NOT(ISPICKVAL( leaseworks__Invoice__r.leaseworks__Transaction_Currency__c , &#39;&#39;))),leaseworks__Amount__c * leaseworks__Invoice__r.leaseworks__Exchange_Rate__c,null)</formula>
    <label>Converted Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>