force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <formula>CASESAFEID(leaseworks__Invoice__r.leaseworks__Lease__r.leaseworks__Aircraft__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Aircraft</label>
    <type>Text</type>
</CustomField>