force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <inlineHelpText>Update of the  amount will re-calculate Payment Line Items accordingly, all manual adjustments will be overwritten</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>