force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Balance_Due_On_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Due_On_Invoice__c</fullName>
    <label>Z_Unused_2406_Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>