force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting: Bank Account from lease</description>
    <label>Z_Unused_2106 Lessor Bank</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.CreatedById</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments &amp; Credits</relationshipLabel>
    <relationshipName>View_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>