force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Bank_Fee_Accounting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Fee_Accounting__c</fullName>
    <label>Bank Fee Accounting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Fee Expense</fullName>
                <default>true</default>
                <label>Bank Fee Expense</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>