force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Cash_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Security_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Security deposit which is used for offset</description>
    <label>Security Deposit Offset</label>
    <referenceTo>leaseworks__Cash_Security_Deposit__c</referenceTo>
    <relationshipLabel>Offset Payments</relationshipLabel>
    <relationshipName>Payments_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>