force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Cash_Unapplied__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Unapplied__c</fullName>
    <description>This checkbox is auto-checked by the system when the cash has been moved to a Payment on Account or applied to a different invoice utilizing the Unapply Cash button.</description>
    <formula>if( leaseworks__Amount_Unapplied__c &gt;0 , true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the cash originally linked to this payment has been unapplied from the associated invoice. Instead, it has been transferred to a Payment on Account for the lessee or utilized for other outstanding receivables from the lessee</inlineHelpText>
    <label>Cash Unapplied?</label>
    <type>Checkbox</type>
</CustomField>