force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Date_of_Reversal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Reversal__c</fullName>
    <description>Payment reversal date</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>