force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Date_of_Unpost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Unpost__c</fullName>
    <description>Date the payment is unposted</description>
    <label>Unpost Journal Date</label>
    <type>Date</type>
</CustomField>