force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Deferred__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a payment has been made for a deferred invoice.</description>
    <inlineHelpText>Indicates if a payment has been made for a deferred invoice.</inlineHelpText>
    <label>Deferred</label>
    <type>Checkbox</type>
</CustomField>