force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Payments &amp; Credits</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>