force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <label>Z_Unused_0919_Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assembly MR</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
                <default>true</default>
                <label>Aircraft MR</label>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Intercompany Rent</fullName>
            </value>
            <value>
                <fullName>Intercompany MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>