force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Invoice_Type_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type_F__c</fullName>
    <formula>text(leaseworks__Invoice__r.leaseworks__Invoice_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>