force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <formula>CASESAFEID( leaseworks__Invoice__r.leaseworks__Lease__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Lease</label>
    <type>Text</type>
</CustomField>