force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Legacy__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this as true for the legacy data. Otherwise, the value will be auto-populated if the Payment(MR Invoice payment) is processed via utilization staging.</description>
    <inlineHelpText>Mark this as true for the legacy data. Otherwise, the value will be auto-populated if the Payment(MR Invoice payment) is processed via utilization staging.</inlineHelpText>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>