force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party to whom money is to be paid in a financial transaction.</description>
    <inlineHelpText>The party to whom money is to be paid in a financial transaction.</inlineHelpText>
    <label>Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments &amp; Credits (Lessor)</relationshipLabel>
    <relationshipName>Payments_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>