force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Maintenance_Reserve_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_LLP__c</fullName>
    <label>Maintenance Reserve LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>