force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Memo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Memo__c</fullName>
    <description>Extra comments for Credit Memo</description>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>