force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Monthly_Utilization_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Monthly_Utilization_Id__c</fullName>
    <formula>leaseworks__Invoice__r.leaseworks__Utilization_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Id</label>
    <type>Text</type>
</CustomField>