force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Multicurrency_Enabled_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Multicurrency_Enabled_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This hidden checkbox controls the conditional display of fields on the layout when multicurrency is enabled.</description>
    <label>_Multicurrency Enabled</label>
    <type>Checkbox</type>
</CustomField>