force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Status__c</fullName>
    <description>This status indicates the approval of the Payment record.  Only approved Invoice Payments are posted for Receivable reporting.</description>
    <inlineHelpText>This status indicates the approval of the Payment record.  Only approved Invoice Payments are posted for Receivable reporting.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled-Pending</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>