force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Prorate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prorate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enter Total Amount and individual buckets will be allocated on prorate. If unchecked, individual buckets should be entered manually.</description>
    <inlineHelpText>Enter Total Amount and individual buckets will be allocated on prorate. If unchecked, individual buckets should be entered manually.</inlineHelpText>
    <label>Prorate</label>
    <type>Checkbox</type>
</CustomField>