force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Reversed_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reversed_Amount__c</fullName>
    <formula>leaseworks__Remaining_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>