force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Y_Hidden_Amount_ABS__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Amount_ABS__c</fullName>
    <formula>ABS( leaseworks__Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2012 Y_Hidden Amount (ABS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>