force-app/main/default/objects/leaseworks__Payment__c/fields/leaseworks__Y_hidden_Auto_Create_PLI__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_Auto_Create_PLI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>False for Credit Memos with amount given by user</description>
    <label>_Auto Create PLI</label>
    <type>Checkbox</type>
</CustomField>