force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Aircraft_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Aircraft_MR</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>