force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Assembly_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assembly_MR</fullName>
    <active>false</active>
    <label>Z_Unused_2012 Assembly MR</label>
</RecordType>