force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Credit_Memo_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Memo_MR</fullName>
    <active>true</active>
    <label>Credit</label>
</RecordType>