force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Credit_Memo_Non_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Memo_Non_MR</fullName>
    <active>false</active>
    <label>Z_Unused_2012 Credit Memo Non MR</label>
</RecordType>