force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Finance_Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Finance_Lease</fullName>
    <active>false</active>
    <description>Finance Lease Payments</description>
    <label>Z_Unused_2012 Finance Lease</label>
</RecordType>