force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Interest.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Interest</fullName>
    <active>false</active>
    <description>Interest Payment</description>
    <label>Z_Unused_2012 Interest</label>
</RecordType>