force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Other.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Other</fullName>
    <active>false</active>
    <label>Z_Unused_2012 Manual</label>
</RecordType>