force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Rent.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Rent</fullName>
    <active>false</active>
    <label>Z_Unused_2012 Rent</label>
</RecordType>