force-app/main/default/objects/leaseworks__Payment__c/recordTypes/leaseworks__Security_Deposit.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Security_Deposit</fullName>
    <active>false</active>
    <label>Z_Unused_2012 Security Deposit</label>
</RecordType>