force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__CancellationDateNotPrioToPaymentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CancellationDateNotPrioToPaymentDate</fullName>
    <active>true</active>
    <description>Cancellation Date cannot be prior to the payment received date.</description>
    <errorConditionFormula>leaseworks__Date_of_Reversal__c &lt;  leaseworks__Payment_Date__c</errorConditionFormula>
    <errorMessage>Cancellation Date cannot be prior to the payment received date.</errorMessage>
</ValidationRule>