force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__CannotEditBankChargesForPOA_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CannotEditBankChargesForPOA_Application</fullName>
    <active>true</active>
    <description>When the user tries to add bank charges on a payment record created by applying Payment on Account, a validation error wil be thrown</description>
    <errorConditionFormula>AND(NOT( ISNULL(leaseworks__Payment_on_Account__c) ), NOT( ISBLANK(leaseworks__Payment_on_Account__c) ),ISCHANGED( leaseworks__Bank_Charges__c ))</errorConditionFormula>
    <errorMessage>Bank charges cannot be modified when applying a payment on account to an invoice.</errorMessage>
</ValidationRule>