force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__CreatePyOnlyForApprovedInv.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreatePyOnlyForApprovedInv</fullName>
    <active>true</active>
    <description>Payments can only be created on approved unpaid invoices.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c,ISNEW(),
				OR(leaseworks__Status__c=&#39;Pending&#39;,AND(leaseworks__Status__c = &#39;Approved&#39; , leaseworks__Y_Hidden_Invoice_Payment_Status__c =&#39;Credited&#39;),leaseworks__Status__c=&#39;Submitted&#39;,leaseworks__Status__c=&#39;Declined&#39;,leaseworks__Status__c=&#39;Cancelled-Pending&#39;,leaseworks__Status__c=&#39;Cancelled&#39;))</errorConditionFormula>
    <errorMessage>Payments can only be created on approved unpaid invoices.</errorMessage>
</ValidationRule>