force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__Entity_Is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Entity_Is_Inactive</fullName>
    <active>true</active>
    <description>To Check Entity is Inactive when Payment is Created.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
ISNEW(),
leaseworks__Y_hidden_AccEnabled__c,
leaseworks__Entity__r.leaseworks__Inactive__c)</errorConditionFormula>
    <errorMessage>Unable to proceed with transactions: The related invoice is associated with an inactive entity. Please ensure the entity is active to continue.</errorMessage>
</ValidationRule>