force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__NoPaymentsForProvisionUR.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoPaymentsForProvisionUR</fullName>
    <active>true</active>
    <description>Not allow for payments if the utilization is Provision.</description>
    <errorConditionFormula>leaseworks__Invoice__r.leaseworks__Monthly_Utilization_Type_F__c =&#39;Provision&#39;</errorConditionFormula>
    <errorMessage>Payment not allowed for provision invoice.</errorMessage>
</ValidationRule>