force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__NoUpdateAftrApprovedStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoUpdateAftrApprovedStatus</fullName>
    <active>false</active>
    <description>Status should not be changed after approved status -- Deprecated</description>
    <errorConditionFormula>false
/*ISPICKVAL(PRIORVALUE(Payment_Status__c),&quot;Approved&quot;) &amp;&amp; ISCHANGED(Payment_Status__c)*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Payment_Status__c</errorDisplayField>
    <errorMessage>Status of Approved payment cannot be changed.</errorMessage>
</ValidationRule>