force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__PaymentAmountGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PaymentAmountGreaterThanZero</fullName>
    <active>true</active>
    <description>This is for the deferred payment. The amount should not be null or less than zero.</description>
    <errorConditionFormula>AND(leaseworks__Deferred__c, OR(leaseworks__Amount__c=null, leaseworks__Amount__c &lt; 0.0))</errorConditionFormula>
    <errorDisplayField>leaseworks__Amount__c</errorDisplayField>
    <errorMessage>The amount received should not be less than zero.</errorMessage>
</ValidationRule>