force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__PaymentDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PaymentDateRule</fullName>
    <active>false</active>
    <description>Payment date can not be before invoice date.</description>
    <errorConditionFormula>false /*Payment_Date__c &lt; Invoice__r.Invoice_Date__c*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Payment_Date__c</errorDisplayField>
    <errorMessage>Payment date can not be before invoice date.</errorMessage>
</ValidationRule>