force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__Status_is_Apprved_and_Entity_Is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Status_is_Apprved_and_Entity_Is_Inactive</fullName>
    <active>true</active>
    <description>To Check Entity is Inactive when Payment is approved.</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
NOT(ISNEW()),
ISCHANGED(leaseworks__Payment_Status__c),
OR(
AND(
ISPICKVAL(PRIORVALUE(leaseworks__Payment_Status__c), &apos;Pending&apos;),
ISPICKVAL(leaseworks__Payment_Status__c, &apos;Approved&apos;)),
AND(
ISPICKVAL(PRIORVALUE(leaseworks__Payment_Status__c), &apos;Cancelled-Pending&apos;),
ISPICKVAL(leaseworks__Payment_Status__c, &apos;Cancelled&apos;))),
leaseworks__Y_hidden_AccEnabled__c,
leaseworks__Entity__r.leaseworks__Inactive__c
)</errorConditionFormula>
    <errorMessage>Unable to proceed with approval/cancellation. Entity on the Payment is inactive. Please link it to an active entity to continue.</errorMessage>
</ValidationRule>