force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__Total_Invoice_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Total_Invoice_Amount_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>and (leaseworks__Amount__c &lt;=0 , leaseworks__Invoice_Type_F__c ==&#39;Cash&#39;    )</errorConditionFormula>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>