force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__Type_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Type_Mismatch</fullName>
    <active>false</active>
    <description>Invoice Type and Payment type must match.
//Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leaseworks__Invoice_Type__c</errorDisplayField>
    <errorMessage>Payment Type must be the same as Invoice Type.</errorMessage>
</ValidationRule>