force-app/main/default/objects/leaseworks__Payment__c/validationRules/leaseworks__ValidationForNegativeExchangeRate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ValidationForNegativeExchangeRate</fullName>
    <active>true</active>
    <description>Exchange Rate should be greater than zero.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c,leaseworks__Exchange_Rate__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>leaseworks__Exchange_Rate__c</errorDisplayField>
    <errorMessage>Exchange Rate should be greater than zero.</errorMessage>
</ValidationRule>